# toy_factory

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/tests/: test_product.py  test_station.py
src/toy_factory/: defect_stack.py  factory.py  product.py  station.py
src/utils/: logger.py
